--- a/index.html
+++ b/index.html
@@ -25,29 +25,29 @@
             </div>
             <div class="rating">
                 <div class="ct ct1">
-                    <div><img src="./images/icon-star.svg" />
-                        <img src="./images/icon-star.svg" />
-                        <img src="./images/icon-star.svg" />
-                        <img src="./images/icon-star.svg" />
-                        <img src="./images/icon-star.svg" />
+                    <div><img src="./images/icon-star.svg" alt="star"/>
+                        <img src="./images/icon-star.svg" alt="star"/>
+                        <img src="./images/icon-star.svg" alt="star"/>
+                        <img src="./images/icon-star.svg" alt="star"/>
+                        <img src="./images/icon-star.svg" alt="star"/>
                     </div>
                     <p>Rated 5 Stars in Reviews</p>
                 </div>
                 <div class="ct ct2">
-                    <div><img src="./images/icon-star.svg" />
-                        <img src="./images/icon-star.svg" />
-                        <img src="./images/icon-star.svg" />
-                        <img src="./images/icon-star.svg" />
-                        <img src="./images/icon-star.svg" />
+                    <div><img src="./images/icon-star.svg" alt="star"/>
+                        <img src="./images/icon-star.svg" alt="star"/>
+                        <img src="./images/icon-star.svg" alt="star"/>
+                        <img src="./images/icon-star.svg" alt="star"/>
+                        <img src="./images/icon-star.svg" alt="star"/>
                     </div>
                     <p>Rated 5 Stars in Report Guru</p>
                 </div>
                 <div class="ct ct3">
-                    <div><img src="./images/icon-star.svg" />
-                        <img src="./images/icon-star.svg" />
-                        <img src="./images/icon-star.svg" />
-                        <img src="./images/icon-star.svg" />
-                        <img src="./images/icon-star.svg" />
+                    <div><img src="./images/icon-star.svg" alt="star"/>
+                        <img src="./images/icon-star.svg" alt="star"/>
+                        <img src="./images/icon-star.svg" alt="star"/>
+                        <img src="./images/icon-star.svg" alt="star"/>
+                        <img src="./images/icon-star.svg" alt="star"/>
                     </div>
                     <p>Rated 5 Stars in BestTech</p>
                 </div>
@@ -55,7 +55,7 @@
             <div class="cards">
                 <div class="card1 crd">
                     <div class="heading">
-                        <img src="./images/image-colton.jpg" />
+                        <img src="./images/image-colton.jpg" alt="colton"/>
                         <div class="info">
                             <h1>Colton Smith
                             </h1>
@@ -72,7 +72,7 @@
                 </div>
                 <div class="card2 crd">
                     <div class="heading">
-                        <img src="./images/image-irene.jpg" />
+                        <img src="./images/image-irene.jpg" alt="irene" />
                         <div class="info">
                             <h1>Irene Roberts 
                             </h1>
@@ -88,7 +88,7 @@
                 </div>
                 <div class="card3 crd">
                     <div class="heading">
-                        <img src="./images/image-anne.jpg" />
+                        <img src="./images/image-anne.jpg" alt="anne"/>
                         <div class="info">
                             <h1>Anne Wallace
                             </h1>
